--- a/client/src/assets/styles/index.css
+++ b/client/src/assets/styles/index.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #263238;
+}
+
 #root {
   min-height: 100vh;
   display: grid;
@@ -16,4 +20,10 @@ a {
 
 img {
   max-width: 100%;
+}
+
+.drawer-header {
+  background-color: #37474f;
+  padding: 1.75em;
+  font-size: 12pt;
 }
