--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,7 +1,8 @@
 .App {
+  color: #f0f0f0;
   font-family: sans-serif;
   text-align: center;
   height: 100vh;
-  width:100vw;
-  background-color: #f0f0f0
+  width: 100vw;
+  background-color: #263238;
 }
